- delete shortcut for queues